# mineCper

./: CMakeLists.txt  HOW_TO_PLAY.md  LICENSE.txt  README.md
include/: board.h  input.h
src/: board.c  input.c  main.c
